--- a/index.html
+++ b/index.html
@@ -84,6 +84,62 @@
                     <p class="artist">by Esteban Del Valle </p>
                 </div>
              </div>
+
+             <div class="carouselcontainer">
+                <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074">
+                  <img src="/pictures/image 1.png"/>
+               </a>
+                  <div class="text">
+                      <p class="title">The Breath of the Moon</p>
+                      <p class="artist">by Mark Admas</p>
+                  </div>
+            </div>
+            <div class="carouselcontainer">
+                <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534">
+                  <img src="/pictures/vorse statue.JPG"/>
+                </a>
+               <div class="text">
+                  <p class="title">Mary Heaton Vorse </p>
+                  <p class="artist">by Penelope Jencks</p>
+              </div>
+            </div>
+            <div class="carouselcontainer">
+                <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5">
+                  <img src="/pictures/image 3.webp"/>
+                </a>
+              <div class="text">
+                  <p class="title">The Time and the Town</p>
+                  <p class="artist">by Esteban Del Valle </p>
+              </div>
+           </div>
+
+           <div class="carouselcontainer">
+            <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074">
+              <img src="/pictures/image 1.png"/>
+           </a>
+              <div class="text">
+                  <p class="title">The Breath of the Moon</p>
+                  <p class="artist">by Mark Admas</p>
+              </div>
+        </div>
+        <div class="carouselcontainer">
+            <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534">
+              <img src="/pictures/vorse statue.JPG"/>
+            </a>
+           <div class="text">
+              <p class="title">Mary Heaton Vorse </p>
+              <p class="artist">by Penelope Jencks</p>
+          </div>
+        </div>
+        <div class="carouselcontainer">
+            <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5">
+              <img src="/pictures/image 3.webp"/>
+            </a>
+          <div class="text">
+              <p class="title">The Time and the Town</p>
+              <p class="artist">by Esteban Del Valle </p>
+          </div>
+       </div>
           </div>
 
           <div class="article">
