--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class ="navbar">
             <a href="index.html" class="titlelogo">
               <img src="pictures/leaf.png" class="logonav">
-              <p class="companyname">Provincetown Public art Foundation</p>
+              <p class="companyname">Provincetown Public Art Foundation</p>
             </a>
 
               <ul class ="nav-menu">
