--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                    expand the public's knowledge and enjoyment of art, as well as to select pieces that will enhance the daily experience of visiting,
                     living and working in the Town.</p>
              <br>
-             <img class="mainpics reveal" src="/pictures/samuel.webp"/>
+             <img class="mainpics reveal" src="/pictures/artpic.JPG"/>
              <br>
              <H3 class="reveal" >Our Goals</H3>
              <br>
@@ -183,7 +183,7 @@
 
              </p>
         
-            <img class="mainpics reveal" src="/pictures/nice picture.jpg"/>
+            <img class="mainpics reveal" src="/pictures/boys club.JPG"/>
             <br>
             <div class="qoute reveal">
                     <p>"The Provincetown Public Art Foundation is dedicated to telling the story of Provincetown's, Past, Present and Future with Public Art."</p>
