--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class ="navbar">
             <a href="index.html" class="titlelogo">
-              <img src="pictures/leaf.png" class="logonav">
+              <img src="pictures/Transparent PNG PPAF logo.png" class="logonav">
               <p class="companyname">Provincetown Public Art Foundation</p>
             </a>
 
@@ -56,13 +56,20 @@
         
 
         <main>
+           <br>
+           <br>
+            <h1 class="bigtitle">Provincetown Public Art Foundation</h1>
+            <br>
+            <p class="undertitle">A 501(c)3 Non-Profit Organization</p>
+
             <br>
             <br>
+       
             <br>
             <div class="slider">
               <div class="carouselcontainer">
                   <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074">
-                    <img src="/pictures/image 1.png"/>
+                    <img src="/pictures/MARK ADAMS FR FR.JPG"/>
                  </a>
                     <div class="text">
                         <p class="title">The Breath of the Moon</p>
@@ -71,7 +78,7 @@
               </div>
               <div class="carouselcontainer">
                   <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534">
-                    <img src="/pictures/vorse statue.JPG"/>
+                    <img src="/pictures/voerse statue FR.jpg"/>
                   </a>
                  <div class="text">
                     <p class="title">Mary Heaton Vorse </p>
@@ -90,7 +97,7 @@
 
              <div class="carouselcontainer">
                 <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074">
-                  <img src="/pictures/image 1.png"/>
+                    <img src="/pictures/MARK ADAMS FR FR.JPG"/>
                </a>
                   <div class="text">
                       <p class="title">The Breath of the Moon</p>
@@ -99,7 +106,7 @@
             </div>
             <div class="carouselcontainer">
                 <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534">
-                  <img src="/pictures/vorse statue.JPG"/>
+                    <img src="/pictures/voerse statue FR.jpg"/>
                 </a>
                <div class="text">
                   <p class="title">Mary Heaton Vorse </p>
@@ -118,7 +125,7 @@
 
            <div class="carouselcontainer">
             <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074">
-              <img src="/pictures/image 1.png"/>
+                <img src="/pictures/MARK ADAMS FR FR.JPG"/>
            </a>
               <div class="text">
                   <p class="title">The Breath of the Moon</p>
@@ -127,7 +134,7 @@
         </div>
         <div class="carouselcontainer">
             <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534">
-              <img src="/pictures/vorse statue.JPG"/>
+                <img src="/pictures/voerse statue FR.jpg"/>
             </a>
            <div class="text">
               <p class="title">Mary Heaton Vorse </p>
@@ -146,6 +153,9 @@
           </div>
           <div class="article">
             <hr class="o-divider">
+            <br>
+            <img class="mainpics" src="/pictures/artpic.JPG"/>
+            <br>
 
             <H3>Our Philosophy</H3>
             <br>
@@ -156,9 +166,6 @@
                  It is the intention of the PPAF to site works that will have lasting value and quality,
                   expand the public's knowledge and enjoyment of art, as well as to select pieces that will enhance the daily experience of visiting,
                    living and working in the Town.</p>
-            <br>
-            <img class="mainpics" src="/pictures/artpic.JPG"/>
-            <br>
 
             <div id="art"></div>
             <hr class="o-divider reveal" >
@@ -215,6 +222,9 @@
             <hr class="o-divider reveal">
             <br>
 
+            <img class="mainpics reveal" src="/pictures/team pic.JPG"/>
+           <br>
+
              <H3 id="about" class="reveal">About Us</H3>
              <br>
              <p class="reveal">The Provincetown Public Art Foundation was founded in January, 2020, by Romolo Del Deo, Lise King, Karen Ojala, Stan Sikorski & Samuel Tager.
@@ -224,8 +234,6 @@
              </p>
              <br>
 
-             <img class="mainpics reveal" src="/pictures/team pic.JPG"/>
-            <br>
 
             <hr class="o-divider reveal">
             <br>
@@ -321,6 +329,14 @@
         <br>
         <hr class="o-divider reveal" >
         <br>
+        <div class="qoute reveal">
+                <p>"The Provincetown Public Art Foundation is dedicated to telling the story of Provincetown's, Past, Present and Future with Public Art."</p>
+ 
+        </div>
+ 
+         <br>
+        <img class="mainpics reveal" src="/pictures/boys club.JPG"/>
+        <br>
         <H3 class="reveal" >Our Goals</H3>
         <br>
         <p>
@@ -337,21 +353,16 @@
 
         </p>
    
-       <img class="mainpics reveal" src="/pictures/boys club.JPG"/>
        <br>
-       <div class="qoute reveal">
-               <p>"The Provincetown Public Art Foundation is dedicated to telling the story of Provincetown's, Past, Present and Future with Public Art."</p>
-
-       </div>
 
         <br>
         <div id="contact"></div>
         <hr class="o-divider reveal">
         <br>
+        <img src="pictures/geomap.png" alt="location" class="contactimage reveal"> 
+        <br>
+        <br>
         <h3 class="reveal">Contact</h3>
-        <br>
-        <br>
-        <img src="pictures/geomap.png" alt="location" class="contactimage reveal">
         <br>
         <br>
         <form class="contact-form row reveal">
