--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="article">
             <hr class="o-divider">
             <br>
-            <img class="mainpics" src="/pictures/artpic.JPG"/>
+            <img class="mainpics opacitytry" src="/pictures/artpic.JPG"/>
             <br>
 
             <H3>Our Philosophy</H3>
