--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div id="art"></div>
             <br>
             <br>
-            <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5">
+            <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5" class="missionlink">
             <button class="missionbutton">Support Public Art </button>
             </a>
             <br>
