--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <h4>The Breath of the Moon</h4>
                     <p>“ The Breath of the Moon: A Tidal Ecology of Provincetown Harbor Project” by Mark Admas to be sited on the waterfront seawall of Provincetown.
                         Commissioned by the Provincetown Public Art Foundation</p>
-                    <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5" class="artlink">
+                    <a href="https://www.zeffy.com/en-US/donation-form/9fe1a772-7a43-4ba1-942c-9ae87b4c8074" class="artlink">
                         <button class="artbutton">Support this Project </button>
                      </a>
 
@@ -162,7 +162,7 @@
                     <h4> Mary Heaton Vorse </h4>
                     <p>“Mary Heaton Vorse Memorial” (model for full scale sculpture, in progress) by Penelope Jencks to be sited at 466 Commercial St.
                          (the Vorse House) Provincetown, MA. Commissioned by the Provincetown Public Art Foundation</p>
-                         <a href="https://www.zeffy.com/en-US/donation-form/79b4ca4b-380e-4202-a685-ff536801ace5" class="artlink">
+                         <a href="https://www.zeffy.com/en-US/donation-form/20dc3155-9f34-4a8c-98bf-fe29b3546534" class="artlink">
                              <button class="artbutton">Support this Project </button>
                         </a>
                 </div>
@@ -201,7 +201,7 @@
                <div class="carouselcontainer">
 
                 <div class="artcontainer ">
-                    <img src="pictures/image 3.webp" alt="">
+                    <img src="pictures/completed time and the town.JPG" alt="">
                     <h4>PPAF Foundation Fund</h4>
                     <p>"Time and the Town” mural detail by Esteban Del Valle sited at 245 Commercial St, Provincetown, MA.
                          Commissioned by the Provincetown Public Art Foundation. Completed July 2021.</p>
