FINAL CHANGE YES WE DID IT!

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                <div class="carouselcontainer">
 
                 <div class="artcontainer ">
-                    <img src="pictures/sliderimg4.JPG" alt="">
+                    <img src="pictures/wind engine.JPG" alt="">
                     <h4>Wind Driven Sculpture</h4>
                     <p>Wind Artist Andrew Mowbray has created a wind-driven drawing sculpture that autonomously creates graphics from the wind.
                          It will be installed at the new Bryant Saltworks temporary art site. The site is dedicated to George Bryant’s love of wind power. </p>
@@ -308,7 +308,7 @@
                 <div class="teamcard">
                     <img src="/pictures/NEWHEADS/julie.JPG">
                     <h4>Blythe Frank</h4>
-                    <p>Board Of Directors</p>
+                    <p>Board of Directors</p>
                 </div>
 
 
@@ -378,7 +378,7 @@
             <div class="teamcarddesktop">
                 <img src="/pictures/NEWHEADS/julie.JPG">
                 <h4>Blythe Frank</h4>
-                <p>Board Of Directors</p>
+                <p>Board of Directors</p>
             </div>
 
 
