image saving change

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
             <br>
             <br>
             <br>
-            <p>Website developed by Marc Ioug</p>
+            <p>Website developed by <a href="https://marc-v.dev/" class="designerlink">Marc-V</a></p>
             <br>
     
 
