romolo changes august 18th

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
 
+                <li class="nav-item">
+                    <a href="#merchandise" class="nav-link">Merch</a>
+                </li>
 
                 <li class="nav-item">
                     <div class="border">
@@ -171,7 +174,7 @@
 
                                 <div class="carouselcontainer">
                                     <div class="artcontainer">
-                                        <img src="pictures/image 2.png" alt="">
+                                        <img src="pictures/maryheatonvorse.jpeg" alt="">
                                         <h4> Mary Heaton Vorse </h4>
                                         <p>“Mary Heaton Vorse Memorial” (model for full scale sculpture, in progress) by
                                             Penelope Jencks to be sited at 466 Commercial St.
@@ -189,8 +192,8 @@
                                 <div class="carouselcontainer">
 
                                     <div class="artcontainer ">
-                                        <img src="pictures/Tempus-Prognosticator.png" alt="">
-                                        <h4>Tempus Prognosticator</h4>
+                                        <img src="pictures/Tempus-Prognosticator.jpeg" alt="">
+                                        <h4>Tempest Prognosticator</h4>
                                         <p>Wind Artist Andrew Mowbray has created a wind-driven drawing sculpture that
                                             autonomously creates graphics from the wind.
                                             It will be installed at the new Cook-Bryant Saltworks temporary Art Site.
@@ -509,7 +512,7 @@
                 <br>
 
 
-                <div class="volounter-section">
+                <div class="volounter-section" id="merchandise">
 
                     <h4>Our Merchandise</h4>
 
