--- a/index.html
+++ b/index.html
@@ -502,17 +502,17 @@
                         Trust.</p>
                     <br>
                     <br>
-                    <a href="mailto:info@provincetownpublicart.com" class="sponsormaillink">
+                    <a href="mailto:info@provincetownpublicart.com" class="sponsormaillink" id="merchandise">
                         <p class="reveal">Find out how your organization or business can also get involved.</p>
                     </a>
 
                 </div>
-                <br>
+                <br >
                 <br>
                 <br>
 
 
-                <div class="volounter-section" id="merchandise">
+                <div class="volounter-section" >
 
                     <h4>Our Merchandise</h4>
 
