--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
             <h1 class="bigtitle">Provincetown Public Art Foundation</h1>
             <br>
             <p class="undertitle">A 501(c)3 Non-Profit Organization</p>
-
-
+            <br>
+            <br>
+            <br>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/888876153?h=ff38d252e8&autoplay=1&loop=1&byline=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <br>
+            <br>
+            <br>
             <br>
             <div class="slider">
                 <div class="carouselcontainer">
